8219698: aarch64: SIGILL triggered when specifying unsupported hardware features Reviewed-by: aph